updated README.md file